--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,7 @@
 }
 
 .App-header {
+  background-image: url('./images/background.jpg');
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
